tests/baselines/reference/parserComputedPropertyName40.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName40.ts(2,5): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName40.ts (1 errors) ====
    class C {
        [a ? "" : ""]() {}
        ~~~~~~~~~~~~~
!!! error TS9002: Computed property names are not currently supported.
    }